Fix spacing

--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -27,7 +27,7 @@
       tr {
         border-bottom: 0.1rem solid #BEBEBE;
         td {
-          padding: 121.2rem 0;
+          padding: 1.2rem 0;
         }
         td:last-child {
           font-weight: bold;
